Resolves: tdf#95192 correctly split non-numeral/numeral parts for natural sort

XCharacterClassification::parsePredefinedToken() with
KParseType::IDENTNAME and KParseTokens::ANY_LETTER does exactly
that, it parses one identifier name consisting of Unicode letters
and stops at the first non-letter character (additionally '-'
hyphen-minus was allowed as character).

Instead, scan for the first (any Unicode) digit and split there.

Also, copying the whole string to the prefix string if no split
happens was unnecessary, the caller does not use the prefix if no
number was found. Nail this as post condition.

Change-Id: I941f9739b39c36c83b63145e3b762ec558738c1c
(cherry picked from commit 2d62a1016438ea0bc079e6de3a5bcdcb34680f43)